<resources>
    <string name="app_name">Antevasi</string>
    <string name="navigation_drawer_open">Open side bar</string>
    <string name="navigation_drawer_close">Close side bar</string>
    <string name="nav_header_desc">Antevasi</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="quotes">Quotes</string>
    <string name="tour_schedule">Tour Schedule</string>
    <string name="blog">Blog</string>
    <string name="videos">Videos</string>
    <string name="biography">Biography</string>
    <string name="faq">FAQ</string>
    <string name="post_button_name">Ask Question</string>
    <string name="token_hint">Batch Token</string>
    <string name="token_message">Enter Batch Token</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="question">Question</string>
    <string name="submit">Submit</string>
    <string name="check_image">The Tick image</string>
    <string name="blessings">Seek Blessings</string>
    <string name="message">Message</string>
    <string name="upcoming_batch">Upcoming batches</string>
    <string name="volunteer">Volunteers section</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Sign in</string>
    <string name="register"> Sign Up</string>
    <string name="new_user">New User?</string>
    <string name="title_activity_volunteer_homepage">VolunteerHomepage</string>
    <string name="upcoming_meeting">Upcoming Meeting</string>
    <string name="attendance">Attendance</string>
    <string name="profile">Profile</string>
    <string name="meetings">Upcoming Meetings</string>
    <string name="not_a_volunteer">Not a volunteer</string>
    <string name="change_password">Change Password</string>
    <string name="date_of_course">Date of Course</string>
    <string name="volunteer_since">Volunteer Since</string>
    <string name="save_button">Save the details</string>
    <string name="cancel">Cancel the operation</string>
    <string name="logout">Logout</string>
    <string name="occupation">Occupation</string>
    <string name="department">Department</string>
    <string name="edit">Edit</string>
    <string name="badge">Badge</string>
    <string name="badge_blue">Badge</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="preview_image">Preview image</string>
    <string name="back_button">Button to move to previous activity</string>
    <string name="register_wallpaper">Registration wallpaper</string>
    <string name="pic">Picture</string>
    <string name="terms">Terms</string>
    <string name="terms_wallpaper">Terms wallpaper</string>
    <string name="terms_and_info">Terms and About</string>
    <string name="about">About</string>
    <string name="antevasi_message">One who dwells inside the Guru</string>
</resources>
