<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_biography"
            android:title="@string/biography"
            android:icon="@drawable/ic_all_inclusive_black_24dp"
            />
        <item
            android:id="@+id/faq"
            android:title="@string/faq"
            android:icon="@drawable/ic_question_answer_black_24dp"
            />
        <item
            android:id="@+id/nav_blessings"
            android:title="@string/blessings"
            android:icon="@drawable/ic_spa_black_24dp"
            />
        <item
            android:id="@+id/nav_quotes"
            android:title="@string/quotes"
            android:icon="@drawable/ic_format_quote_black_24dp"
            />
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/tour_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            />
        <item
            android:id="@+id/nav_home"
            android:title="@string/about"
            android:icon="@drawable/ic_home_black_24dp"
            />

        <item
            android:id="@+id/nav_volunteer"
            android:title="@string/volunteer"
            android:icon="@drawable/ic_person_black_24dp"
            />
    </group>

</menu>
